# async_labjack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  generate_tags.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml
examples/: converting_binary_ain_to_volts.rs  converting_binary_ain_to_volts_with_graceful_cleanup.rs  custom_socket_options.rs  modbus_feedback_frames.rs  reading_and_writing_multiple_tags.rs  reading_and_writing_single_tags.rs  reading_file_data.rs  retry_connection.rs  stream_burst_command_response_mode.rs  stream_burst_spontaneous_mode.rs  streaming_32_bit_value.rs  streaming_ain_with_graceful_cleanup.rs
src/: bin.rs  client.rs  helpers.rs  labjack.rs  lib.rs  modbus_feedback.rs  prelude.rs
src/client/: mod.rs
src/helpers/: bit_manipulation.rs  calibrations.rs  macros.rs  mod.rs  stream.rs
src/labjack/: all_tags.rs  errors.rs  mod.rs
src/labjack_tag/: labjack_tag.rs  mod.rs
src/ljm_constants/: Cargo.toml  README.md  generate_tags.rs  ljm_constants.json
src/modbus_feedback/: mbfb.rs  mod.rs
tests/: mod.rs
