[package]
description = "A pure rust interface to the LabJack T-series via Modbus TCP"
edition = "2021"
license = "MIT"
name = "tokio_labjack"
repository = "https://github.com/nschrading/tokio_labjack"
version = "0.1.0"

[lib]
name = "tokio_labjack_lib"
path = "src/lib.rs"

[[bin]]
name = "tokio_labjack"
path = "src/bin.rs"

[dependencies]
anyhow = "*"
async-trait = "*"
bytes = "*"
derive_builder = "*"
enum_dispatch = "*"
env_logger = "*"
log = "*"
thiserror = "*"
tokio = { version = "1.4", features = ["rt-multi-thread", "macros", "time"] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp"] }

[profile.release]
codegen-units = 1
lto = true
