[package]
description = "A pure rust interface to the LabJack T-series via Modbus TCP"
edition = "2021"
license = "MIT"
name = "tokio_labjack"
repository = "https://github.com/nschrading/tokio_labjack"
version = "0.1.0"

[lib]
name = "tokio_labjack"
path = "src/lib.rs"

[dependencies]
async-trait = "*"
bytes = "*"
derive_builder = "*"
enum_dispatch = "*"
thiserror = "*"
tokio = { version = "1.4", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
] }
tokio-modbus = { version = "*", default-features = false, features = ["tcp"] }
tracing = { version = "*", features = ["log"] }

[dev-dependencies]
env_logger = "*"
mockall = "*"

[profile.release]
codegen-units = 1
lto = true
