[package]
description = "A pure rust, async interface to the LabJack T-series via Modbus TCP"
edition = "2021"
license = "MIT"
name = "async_labjack"
repository = "https://github.com/nschrading/async_labjack"
version = "0.1.0"

[lib]
name = "async_labjack"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
bytes = "1"
derive_builder = "0.20"
enum_dispatch = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["time", "rt", "net"] }
tokio-modbus = { git = "https://github.com/slowtec/tokio-modbus.git", rev = "3926f305edcdb1cf1ad335aef83ad73c750ba573", default-features = false, features = [
    "tcp",
] }
tokio-util = "0.7"
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
env_logger = "0.11"
mockall = "0.13"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "signal",
    "net",
] }

[profile.release]
codegen-units = 1
lto = true
